@@ -27,63 +27,76 @@ class Purchase extends CI_Model
     //    </certificate>
     function purchase($team, $token, $player) 
     {
+        $report = '';
+        
+
        //is the game status open?
         $this->gamestate->refresh();
         $code = $this->gamestate->get_code(); // 3 represents open
         if ($code == 3 ) //&&  $this->agent->is_registered() )
         {
+            
+            
             //echo $team . $token . $player;
             if(!empty($team) && !empty($token) && !empty($player)) //verify parameters
             {
+                
                 $response = $this->curl->simple_post('http://botcards.jlparry.com/buy', array('team'=>$team,'token'=>$token,'player'=>$player));
-                //echo $response;
+                //$report = $response + '</br>'; 
                 $xml = simplexml_load_string($response);
-                //echo $xml;
 
-                foreach ($xml->certificate as $certificate)
+                //Card packs cost 10 peanuts.
+                //get current # of peanuts for current player
+                // update peanuts -10
+
+                $peanuts = $this->players->get_peanuts($player);
+                $new_peanuts = $peanuts - 10; // cost of pack is 10 nuts
+                if ($new_peanuts >= 0)
                 {
-                    $timestamp = date(DATE_ATOM, (int)$certificate->datetime); //convert unix time to mysql compatable
-                    $data = array(
-                    'token' => (string)$certificate->token,
-                    'piece' => (string)$certificate->piece,
-                    'broker' => (string)$certificate->broker,
-                    'player' => (string)$certificate->player,
-                    'datetime' => $timestamp
-                     );
-                    $this->db->insert('collections', $data);// insert into database
-                    //echo 'inserted:' . (string)$certificate->piece . '</br>' ;
+                $this->players->update_peanuts($player, $new_peanuts);
+                    foreach ($xml->certificate as $certificate)
+                    {
+                        $timestamp = date(DATE_ATOM, (int)$certificate->datetime); //convert unix time to mysql compatable
+                        $data = array(
+                        'token' => (string)$certificate->token,
+                        'piece' => (string)$certificate->piece,
+                        'broker' => (string)$certificate->broker,
+                        'player' => (string)$certificate->player,
+                        'datetime' => $timestamp
+                         );
+                        $this->db->insert('collections', $data);// insert into database
+                       // $report = $report .  'inserted:' . (string)$certificate->piece . '</br>' ;
 
 
+                    }
+
+                    return $report . 'Cards Successfully Purchased!';
                 }
-                return true;
+                else 
+                {
+                    return $report . 'Not enough peanuts!';
+                }
             }
             else 
             {
                  //team, token or player variable null or empty
-                 //echo 'team, token or player not set, or the agent may not be registered.';
-                 return false;
+                if(empty($player))
+                {
+                    return 'You must login!';
+                }
+                else 
+                {
+                 return $report . "team or token not set, or the agent may not be registered.";
+                }
             }
         }
         else 
         {
-           
-            //game not open
-            //echo 'status code: ' . $this->gamestate->get_code() . '</br>';
-           if ($this->agent->is_registered()) //doesnt work...
-            {
-               // echo 'Registered: true';
-            }
-            else 
-                {
-                   // echo 'Registered: false';
-                  
-                }
-            return false;
+         return $report . "Server is not open, try again later...";
+            
             
         }
-        
-        
-        
+ 
     }
     
 }
